--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://dimagorga/goit-js-hw-13-image-finder"
+    "url": "git+https://github.com/dimagorga/goit-js-hw-13-image-finder"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
